<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="recommendation"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="number"
        android:key="profile"
        android:tooltipText="@string/tooltip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="notify"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_owned_game_count"
        android:inputType="number"
        android:key="gameCount"
        android:maxLines="1"
        android:summary="(Enter 0 to unlimited output)"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_owned_game_count" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_news_count"
        android:inputType="number"
        android:key="news"
        android:maxLines="1"
        android:summary="(Enter -1 to unlimited output)"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_news_count" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="free"
        android:title="@string/pref_title_free_show" />

    <ListPreference
    android:defaultValue="en-US"
    android:entries="@array/pref_language_options"
    android:entryValues="@array/pref_language_values"
    android:key="language"
    android:negativeButtonText="@null"
    android:positiveButtonText="@null"
    android:title="@string/language_setting" />

</PreferenceScreen>
