<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Search">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:tooltipText="Enter ID"
                android:background="@drawable/round_edittext"
                android:clickable="true"
                android:focusable="true"
                android:inputType="number"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/searchMode"
                app:layout_constraintTop_toTopOf="parent">

            </SearchView>

            <ToggleButton
                android:id="@+id/searchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textColorLink="@color/colorAccent"
                android:textOff="@string/user"
                android:textOn="@string/game"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/searchView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ToggleButton" />

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                tools:text="History" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/playerHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/historyTitle"
                tools:itemCount="5"
                tools:layoutManager="GridLayoutManager"
                tools:listitem="@layout/horizontal_list_item"
                tools:spanCount="5">

            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/gameHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerHistory"
                tools:itemCount="5"
                tools:layoutManager="GridLayoutManager"
                tools:listitem="@layout/horizontal_list_item"
                tools:spanCount="5" />

            <TextView
                android:id="@+id/favouritesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/favourites"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameHistory"
                tools:text="Favourites" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/favourites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favouritesTitle"
                tools:itemCount="7"
                tools:listitem="@layout/vertical_list_item" />

            <Button
                android:id="@+id/button"
                android:layout_width="102dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="Gam Notif"
                android:onClick="testNotification"
                app:layout_constraintBottom_toTopOf="@+id/playerHistory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView" />

            <Button
                android:id="@+id/button2"
                android:layout_width="102dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="testNotification2"
                android:text="User Notif"
                app:layout_constraintBottom_toTopOf="@+id/playerHistory"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:layout_constraintVertical_bias="0.428" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>